# coaliron_16ton_support

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
arduino_control/: README.md
arduino_control/P1AM_network_test/: P1AM_network_test.ino
arduino_control/control_as_client/: a_declarations.ino  a_setup.ino  b_configure.ino  c_feedback.ino  c_position.ino  c_setup.ino  control_as_client.ino  d_feedback.ino  e_motion.ino  e_ros.ino  f_communication.ino  f_run.ino  g_ros.ino  g_run.ino  h_controller.ino  i_run.ino
arduino_control/control_via_serialmonitor/: control_via_serialmonitor.ino
config/: visualize_description.rviz
docs/: control_as_client.drawio
launch/: connect_arduino.launch  test_16ton.launch  test_16ton.launch.xml
meshes/collision/: base_link3.stl  base_link_collision.stl  press_link3.stl  upper_mount_collision.stl
srv/: JointControlPoint.srv
urdf/: 16ton.xacro  16ton_macro.xacro  16ton_macro_v2.xacro
